added global tag for google analytics

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
 <head>
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175311133-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-175311133-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-      <meta name="image" property="og:image" content="https://4happydevs.com.ar/static/ogimg/profile.png">
-      <meta property='og:title' content="4 Happy Developers"/>
-      <meta property='og:description' content='Mobile and Web development team'/>
-      <meta property='og:url' content='https://4happydevs.com.ar/'/>
+    <meta name="image" property="og:image" content="https://4happydevs.com.ar/static/ogimg/profile.png">
+    <meta property='og:title' content="4 Happy Developers" />
+    <meta property='og:description' content='Mobile and Web development team' />
+    <meta property='og:url' content='https://4happydevs.com.ar/' />
     <link rel="stylesheet" href="static/stylesheet.css">
     <link rel="icon" href="static/loop_dots.svg">
     <script src="https://kit.fontawesome.com/be05e512a3.js" crossorigin="anonymous"></script>
@@ -23,7 +33,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Bad+Script&family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Covered+By+Your+Grace&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="icon" type="image/e-icon" href="static/favicon.png">
 
     <title>4 Happy Devs</title>
@@ -99,10 +109,10 @@
           <h5 class="lead">Augusto Sardá</h5>
           <hr>
           <p class="text-justify mb-0">
-            Alias, <em>Angus</em>. He is the <em>math</em> guy. Electromechanical engineer, specialized in 
-            industrial automation. <br>Calm, patient, chilled and thoughtful partner. Above all, a great team mate and 
-            a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a 
-            shield are to a warrior. As you might have concluded, Python is his main IT strength. 
+            Alias, <em>Angus</em>. He is the <em>math</em> guy. Electromechanical engineer, specialized in
+            industrial automation. <br>Calm, patient, chilled and thoughtful partner. Above all, a great team mate and
+            a better friend. <em>Numpy</em> and <em>Matplotlib</em> are to <em>Angus</em> what a sword and a
+            shield are to a warrior. As you might have concluded, Python is his main IT strength.
           </p>
           <p class="mt-0">
             <span class="badge badge-pill badge-primary">#C</span>
@@ -122,8 +132,8 @@
           <hr>
           <p class="text-justify mb-0">
             The <em>brain</em>. In his head lives the knowledge. He is the one that "cooks" the solution to
-           complex issues. Enhanced code comes out from his hands. Easy-going, curious and a life-long learner. He also
-           holds great skills when it comes to sharing his knowledge. React, React Native, Node.js, Express.js &
+            complex issues. Enhanced code comes out from his hands. Easy-going, curious and a life-long learner. He also
+            holds great skills when it comes to sharing his knowledge. React, React Native, Node.js, Express.js &
             Firebase are just some of his weapons.
           </p>
           <p class="mt-0">
@@ -147,11 +157,11 @@
           <hr>
           <p class="text-justify mb-0">
             The <em>engine</em>. He is our senior developer. Always at the forefront in his field. He is by
-            nature an entrepreneur. Enthusiastic, passionate and a very joyful team mate. Certified Scrum 
+            nature an entrepreneur. Enthusiastic, passionate and a very joyful team mate. Certified Scrum
             Master, React Native developer, founder and teacher at <em>Tekné IT Institute</em> and much more.
             He is an expert at boosting the team's motivation.
           </p>
-            <p class="mt-0">
+          <p class="mt-0">
             <span class="badge badge-pill badge-primary">#JavaScript</span>
             <span class="badge badge-pill badge-primary">#React</span>
             <span class="badge badge-pill badge-primary">#React Native</span>
@@ -191,9 +201,9 @@
 
         <div class="col-sm-6 order-2 order-md-1 align-self-center" id="box-three">
           <p class="text-justify">
-            <span>We develop applications.</span> Our specialties are <b>mobile</b> and <b>web</b> 
+            <span>We develop applications.</span> Our specialties are <b>mobile</b> and <b>web</b>
             applications.
-            We do it because we are passionate and love challenges. We also do it to learn and improve 
+            We do it because we are passionate and love challenges. We also do it to learn and improve
             our skills. <span>Feel free to get in touch with us for more information!</span>
           </p>
         </div>
@@ -212,11 +222,11 @@
   <footer>
     <i class="fas fa-tools"></i>
     <p>
-        If you got this far, I have good news!
-        <br><em>4HappyDev's</em> landing page is fortunately not finished yet! More content coming soon...
+      If you got this far, I have good news!
+      <br><em>4HappyDev's</em> landing page is fortunately not finished yet! More content coming soon...
     </p>
     <p>
-        Got this far! New content coming soon!
+      Got this far! New content coming soon!
     </p>
     <i class="fas fa-hard-hat"></i>
   </footer>
