--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property='og:description' content='Mobile and Web development team' />
     <meta property='og:url' content='https://4happydevs.com.ar/' />
     <link rel="stylesheet" href="static/stylesheet.css">
-    <link rel="icon" href="static/loop_dots.svg">
+    <link rel="icon" href="static/favicon.png">
     <script src="https://kit.fontawesome.com/be05e512a3.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Quicksand:wght@300;400;500;600;700&display=swap"
@@ -33,8 +33,6 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Bad+Script&family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Covered+By+Your+Grace&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="icon" type="image/e-icon" href="static/favicon.png">
 
     <title>4 Happy Devs</title>
   </head>
