adding links to cards

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <ul class="fa-ul">
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span>/nachoconsolani</li>
+          </ul>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
