--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <hr class="hr-second">
           <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span>/nachoconsolani</li>
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a href="https://www.linkedin.com/in/nacho-conso/">/nachoconsolani</a></li>
           </ul>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
