adding a tag to github in reference

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a href="https://www.linkedin.com/in/nacho-conso/">/nachoconsolani</a></li>
+            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a href="https://github.com/Apolofx">/apolofx</a></li>
           </ul>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
