added target = _blank for links

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
           </p>
           <hr class="hr-second">
           <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a href="https://www.linkedin.com/in/nacho-conso/">/nachoconsolani</a></li>
-            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a href="https://github.com/Apolofx">/apolofx</a></li>
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/nacho-conso/">/nachoconsolani</a></li>
+            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/Apolofx">/apolofx</a></li>
           </ul>
         </div>
         <!-- <div class="w-100 d-block d-md-none"></div> -->
