finished nacho's and angu's link tags

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#Matlab</span>
           </p>
+          <hr class="hr-second">
+          <ul class="fa-ul">
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/augusto-sard%C3%A1-6a8212159/">/augusto-sarda</a></li>
+            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/acsarda">/acsarda</a></li>
+          </ul>
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
@@ -147,11 +152,11 @@
           </p>
           <hr class="hr-second">
           <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/nacho-conso/">/nachoconsolani</a></li>
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/nacho-conso/">/nacho-consolani</a></li>
             <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/Apolofx">/apolofx</a></li>
           </ul>
         </div>
-        <!-- <div class="w-100 d-block d-md-none"></div> -->
+
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
           <figure>
             <img src="static/enano.jpg" alt="">
