finished axel's and mauro's link tags

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <hr class="hr-second">
+          <ul class="fa-ul">
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/axeldix/?locale=en_US">/axel-diaz</a></li>
+            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/axdiaz">/axdiaz</a></li>
+          </ul>
+
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
@@ -198,6 +204,11 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <hr class="hr-second">
+          <ul class="fa-ul">
+            <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/mauro-consolani/?locale=en_US">/mauro-consolani</a></li>
+            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/mfconsolani">/mfconsolani</a></li>
+          </ul>
         </div>
 
       </div>
