--- a/index.html
+++ b/index.html
@@ -120,11 +120,13 @@
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#Matlab</span>
           </p>
+          <div class="links">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/augusto-sard%C3%A1-6a8212159/">/augusto-sarda</a></li>
             <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/acsarda">/acsarda</a></li>
           </ul>
+        </div>
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
@@ -150,11 +152,13 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <div class="links">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/nacho-conso/">/nacho-consolani</a></li>
             <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/Apolofx">/apolofx</a></li>
           </ul>
+          </div>
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
@@ -178,12 +182,13 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <div class="links">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/axeldix/?locale=en_US">/axel-diaz</a></li>
             <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/axdiaz">/axdiaz</a></li>
           </ul>
-
+        </div>
         </div>
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
@@ -204,11 +209,13 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
+          <div class="links">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/mauro-consolani/?locale=en_US">/mauro-consolani</a></li>
             <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/mfconsolani">/mfconsolani</a></li>
           </ul>
+        </div>
         </div>
 
       </div>
