fixed issue - part 1

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         </div>
 
-        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 d-flex flex-column">
           <figure>
             <img src="static/mauro.jpeg" alt="">
           </figure>
@@ -209,7 +209,7 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
-          <div class="links">
+          <div class="links mt-auto">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/mauro-consolani/?locale=en_US">/mauro-consolani</a></li>
