--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
       <div class="row justify-content-around">
 
-        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 d-flex flex-column">
           <figure>
             <img src="static/angus.jpg" alt="">
           </figure>
@@ -120,7 +120,7 @@
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#Matlab</span>
           </p>
-          <div class="links">
+          <div class="mt-auto">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/augusto-sard%C3%A1-6a8212159/">/augusto-sarda</a></li>
@@ -129,7 +129,7 @@
         </div>
         </div>
 
-        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 d-flex flex-column">
           <figure>
             <img src="static/nacho.jpeg" alt="">
           </figure>
@@ -152,7 +152,7 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
-          <div class="links">
+          <div class="mt-auto">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/nacho-conso/">/nacho-consolani</a></li>
@@ -161,7 +161,7 @@
           </div>
         </div>
 
-        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 ">
+        <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 d-flex flex-column">
           <figure>
             <img src="static/enano.jpg" alt="">
           </figure>
@@ -182,7 +182,7 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
-          <div class="links">
+          <div class="mt-auto">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/axeldix/?locale=en_US">/axel-diaz</a></li>
@@ -209,7 +209,7 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
           </p>
-          <div class="links mt-auto">
+          <div class="mt-auto">
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/mauro-consolani/?locale=en_US">/mauro-consolani</a></li>
