fixed size nacho's picture

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="col-sm-5 my-sm-1 my-2 col-lg container m-lg-2 p-lg-1 d-flex flex-column">
           <figure>
-            <img src="static/nacho.jpeg" alt="">
+            <img id="foto-nacho" src="static/nacho.jpeg" alt="">
           </figure>
           <h5 class="lead">Nacho Consolani</h5>
           <hr>
