update github url

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <hr class="hr-second">
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a target="_blank" href="https://www.linkedin.com/in/axeldix/?locale=en_US">/axel-diaz</a></li>
-            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/axdiaz">/axdiaz</a></li>
+            <li><span class="fa-li"><i class="fab fa-github-square"></i></span><a target="_blank" href="https://github.com/axeldix">/axeldix</a></li>
           </ul>
         </div>
         </div>
