added badges to mauro's profile

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             <span class="badge badge-pill badge-primary">#Bootstrap</span>
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
+            <span class="badge badge-pill badge-primary">#JavaScript</span>
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
