--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#JavaScript</span>
+            <span class="badge badge-pill badge-primary">#Node.js</span>
+      
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
