--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#JavaScript</span>
             <span class="badge badge-pill badge-primary">#Node.js</span>
-      
+            <span class="badge badge-pill badge-primary">#MongoDB</span>
+                  
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
