--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
             <span class="badge badge-pill badge-primary">#JavaScript</span>
             <span class="badge badge-pill badge-primary">#Node.js</span>
             <span class="badge badge-pill badge-primary">#MongoDB</span>
-                  
+            <span class="badge badge-pill badge-primary">#MySQL</span>
+                              
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
