--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             <span class="badge badge-pill badge-primary">#Firebase</span>
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
+            <span class="badge badge-pill badge-primary">#Next.js</span>
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
