--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#Next.js</span>
+            <span class="badge badge-pill badge-primary">#MongoDB</span>           
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
