--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
             <span class="badge badge-pill badge-primary">#HTML</span>
             <span class="badge badge-pill badge-primary">#CSS</span>
             <span class="badge badge-pill badge-primary">#Next.js</span>
-            <span class="badge badge-pill badge-primary">#MongoDB</span>           
+            <span class="badge badge-pill badge-primary">#MongoDB</span>
+            <span class="badge badge-pill badge-primary">#MySQL</span>           
+            
           </p>
           <div class="mt-auto">
           <hr class="hr-second">
